--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ charts/pedido-app-0.1.0.tgz
 charts/pedido-app/index.yaml
 pedidos-charts/
 repo/
+/var/jenkins_home/workspace/unisabana/pedidos-charts/charts/pedido-app-0.1.0.tgz
+/var/jenkins_home/workspace/unisabana/pedidos-charts/charts/pedido-app/index.yaml
+pedidos-charts/
+repo/
