Update demo-api image tag to 51be3f2

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ repo/
 /var/jenkins_home/workspace/unisabana/pedidos-charts/charts/pedido-app/index.yaml
 pedidos-charts/
 repo/
+/var/jenkins_home/workspace/unisabana/pedidos-charts/charts/pedido-app-0.1.0.tgz
+/var/jenkins_home/workspace/unisabana/pedidos-charts/charts/pedido-app/index.yaml
+pedidos-charts/
+repo/
